--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gatsby-source-graphcms": "^0.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-youtube-embed": "^1.0.2"
   },
   "keywords": [
     "gatsby"
